# ABFML

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
abfml/: __init__.py  calculate.py  main.py
abfml/core/model/: method.py
abfml/data/: __init__.py  read_data.py
abfml/entrypoints/: check.py  main_command.py  main_parser.py  train.py  valid.py
abfml/logger/: loggers.py
abfml/model/: field_model_bp.py  math_fun.py  method.py  network.py  normal.py
abfml/optimizer/: learn_rate.py
abfml/test/: data.py
abfml/utils/: code_tree.py
api/core/loss/: index.html
api/core/model/method/: index.html
api/core/optimizer/: index.html
api/data/: index.html
api/entrypoints/: index.html
api/train/: index.html
citation/: index.html
cli/: index.html
docs/: index.md
example/BPMlp/: checkpoint_final.ckpt  input.json  loss.curve  model.pt
example/DP-sea/: input.json
example/bp-model/: bp_input.json  checkpoint_final.ckpt  input.json  loss.curve  model.pt
example/dp-model/: dp_input.json  input.json  loss.curve  model.pt  test1.extxyz
example/new-MLFF/: LJ-model.py  checkpoint_final.ckpt  checkpoint_latest.ckpt  input.json  loss.curve  model.pt  usedefined_input.json
input/: bp_input.json  dp_input.json  nep_input.json  usedefined_input.json
install/: index.html
lmp/: Makefile.mpi
lmp/ABFML/: CMakeLists.txt  pair_abfml.cpp  pair_abfml.h  pair_mlff.cpp  pair_mlff.h
lmp/ABFML/plugin/: abfmlplugin.cpp
search/: search_index.json
site/: 404.html  sitemap.xml
site/api/data/: index.html
site/api/entrypoints/: index.html
site/api/train/: index.html
site/api/utils/: index.html
site/install/: index.html
site/search/: search_index.json
tests/: calculate_ase.py  data.py
